fixed alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@ body {
 .custom-background {
   background-image: url("/line.png");
   background-size: contain;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
   height: 16rem;
 }
@@ -46,15 +46,19 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 @media screen and (min-width: 1280px) {
   .custom-div {
   background-image: url("/Vector1.png");
-  background-size: contain;
+  /* background-size: contain; */
+  /* height: 100%; */
+  padding: 3rem 0;
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) {
   .custom-div {
     display: flex;
     width: 100%;
@@ -88,3 +92,4 @@ body {
     background-position: center;
     background-repeat: repeat-y;
 }
+
